Add Favicon and Titles

--- a/rooms.html
+++ b/rooms.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Homegate Inn
+title: Rooms | Homegate Inn
 ---
 
   <div class="block-30 block-30-sm item" style="background-image: url('/assets/images/background_rooms.JPEG');" data-stellar-background-ratio="0.5">
