--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Homegate Inn
+title: About Us | Homegate Inn
 ---
     
   <div class="block-30 block-30-sm item" style="background-image: url('/assets/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
