--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@ title: Homegate Inn
                 </div>
               </div>
               {% endfor %}
-              
           </div>
-
         </div> <!-- .col-md-12 -->
       </div>
   </div>
@@ -107,60 +105,24 @@ title: Homegate Inn
       </div>
     </div>
     <div class="row">
+      {% for item in site.data.reviews %}
       <div class="col-md-6 col-lg-4">
-
         <div class="block-33">
           <div class="vcard d-flex mb-3">
-            <div class="image align-self-center"><img src="/assets/images/person_3.jpg" alt="Person here"></div>
+            <div class="image align-self-center"><img src="{{ item.image }}" alt="Person here"></div>
             <div class="name-text align-self-center">
-              <h2 class="heading">Martin Newmansfield</h2>
+              <h2 class="heading">{{ item.name }}</h2>
               <span class="meta">Satisfied Customer</span>
             </div>
           </div>
           <div class="text">
             <blockquote>
-              <p>&rdquo; Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid. Atque dolore esse veritatis iusto eaque perferendis non dolorem fugiat voluptatibus vitae error ad itaque inventore accusantium tempore dolores sunt. &ldquo;</p>
+              <p>&rdquo;{{ item.review }}&ldquo;</p>
             </blockquote>
           </div>
         </div>
-
       </div>
-      <div class="col-md-6 col-lg-4">
-
-        <div class="block-33">
-          <div class="vcard d-flex mb-3">
-            <div class="image align-self-center"><img src="/assets/images/person_2.jpg" alt="Person here"></div>
-            <div class="name-text align-self-center">
-              <h2 class="heading">Nancy Green</h2>
-              <span class="meta">Satisfied Customer</span>
-            </div>
-          </div>
-          <div class="text">
-            <blockquote>
-              <p>&rdquo; Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid. Atque dolore esse veritatis iusto eaque perferendis non dolorem fugiat voluptatibus vitae error ad itaque inventore accusantium tempore dolores sunt. &ldquo;</p>
-            </blockquote>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-md-6 col-lg-4">
-
-        <div class="block-33">
-          <div class="vcard d-flex mb-3">
-            <div class="image align-self-center"><img src="/assets/images/person_1.jpg" alt="Person here"></div>
-            <div class="name-text align-self-center">
-              <h2 class="heading">Elizabeth Charles</h2>
-              <span class="meta">Satisfied Customer</span>
-            </div>
-          </div>
-          <div class="text">
-            <blockquote>
-              <p>&rdquo; Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid. Atque dolore esse veritatis iusto eaque perferendis non dolorem fugiat voluptatibus vitae error ad itaque inventore accusantium tempore dolores sunt. &ldquo;</p>
-            </blockquote>
-          </div>
-        </div>
-
-      </div>
+      {% endfor %}
     </div>
   </div>
 </div>
