--- a/rooms.html
+++ b/rooms.html
@@ -25,7 +25,7 @@ title: Rooms | Homegate Inn
           <div class="col-md-12 mb-5">
             
             <div class="block-3 d-md-flex">
-              <div class="{{ item.img_div_class }}" style="background-image: url('/assets/images/single.JPEG');"></div>
+              <div class="{{ item.img_div_class }}" style="background-image: url('{{ item.image }}');"></div>
               <div class= "{{ item.txt_div_class }}">
 
                 <h2 class="heading">{{item.type}}</h2>
