--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: About Us | Homegate Inn
 ---
     
-  <div class="block-30 block-30-sm item" style="background-image: url('/assets/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+  <div class="block-30 block-30-sm item" style="background-image: url('/assets/images/whole.JPEG');" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-10">
@@ -21,7 +21,7 @@ title: About Us | Homegate Inn
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12">
-            <img src="/assets/images/bg_1.jpg" alt="Image placeholder" class="img-fluid">
+            <img src="/assets/images/hall.JPEG" alt="Image placeholder" class="img-fluid">
           </div>
         </div>
         <div class="row">
@@ -45,8 +45,7 @@ title: About Us | Homegate Inn
 
     <div class="block-31 mb-5" style="position: relative;">
           <div class="owl-carousel loop-block-31">
-            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/bg_2.jpg');"></div>
-            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/bg_1.jpg');"></div>
-            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/bg_3.jpg');"></div>
+            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/bball.JPEG');"></div>
+            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/back.JPEG');"></div>
           </div>
-        </div>
+    </div>
