--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Homegate Inn
 <div class="block-31" style="position: relative;">
   <div class="owl-carousel loop-block-31 ">
     {% for item in site.data.welcome_loop %}
-    <div class="block-30 item" style="background-image: url('/assets/images/flowers.jpeg');" data-stellar-background-ratio="0.5">
+    <div class="block-30 item" style="background-image: url('{{item.image}}');" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
