Add phone number href and open address in google maps

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Homegate Inn
           <div class="col-md-10">
             <span class="subheading-sm">Welcome</span>
             <h2 class="heading">{{ item.text }}</h2>
-            <p><a href="#" class="btn py-4 px-5 btn-primary">Contact Us</a></p>
+            <p><a href="tel:6627734005" class="btn py-4 px-5 btn-primary">Call now</a></p>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@ title: Homegate Inn
       <div class="row align-items-center">
         <div class="col-md-12">
           <h2 class="heading">Quality accommodation that exceeds the expectations</h2>
-          <p><a href="#" class="btn py-4 px-5 btn-primary">Contact Us</a></p>
+          <p><a href="tel:6627734005" class="btn py-4 px-5 btn-primary"> Call now</a></p>
         </div>
       </div>
     </div>
