--- a/rooms.html
+++ b/rooms.html
@@ -36,7 +36,7 @@ title: Rooms | Homegate Inn
                   <li><strong>Bed Type:</strong> {{ item.bed }}</li>
                 </ul>
 
-                <p><a href="#" class="btn btn-primary py-3 px-5">Call for pricing</a></p>
+                <p><a href="tel:6627734005" class="btn btn-primary py-3 px-5">Call for pricing</a></p>
 
               </div>
             </div>
