--- a/rooms.html
+++ b/rooms.html
@@ -77,20 +77,18 @@ title: Rooms | Homegate Inn
               <div class="row">
                 <div class="col-md-12 block-13">
                   <div class="nonloop-block-13 owl-carousel">
-                    {% for image in site.static_files %}
-                      {% if image.path contains 'images/gallery' %}
-                        <div class="item">
-                          <div class="block-34">
-                            <div class="image"> 
-                              <a href="#"><img src="{{ site.baseurl }}{{ image.path }}" alt="Image placeholder"></a>
-                              </div>
-                              <div class ="text">
-                                <h2 class="heading">Standard Single Room</h2>
-                                <p>Description!</p>
-                              </div>
-                              </div>
-                        </div>
-                      {% endif %}
+                    {% for item in site.data.gallery_rooms %}
+                      <div class="item">
+                        <div class="block-34">
+                          <div class="image"> 
+                            <a href="#"><img src="{{ item.image }}" alt="Image placeholder"></a>
+                            </div>
+                            <div class ="text">
+                              <h2 class="heading">{{ item.heading }}</h2>
+                              <p> {{ item.description }}</p>
+                            </div>
+                            </div>
+                      </div>
                     {% endfor %}
                   </div>
                 </div>
@@ -102,21 +100,19 @@ title: Rooms | Homegate Inn
               <div class="row">
                 <div class="col-md-12 block-13">
                   <div class="nonloop-block-13 owl-carousel">
-                    {% for image in site.static_files %}
-                    {% if image.path contains 'images/gallery' %}
+                    {% for item in site.data.gallery_amenities %}
                       <div class="item">
                         <div class="block-34">
                           <div class="image"> 
-                            <a href="#"><img src="{{ site.baseurl }}{{ image.path }}" alt="Image placeholder"></a>
+                            <a href="#"><img src="{{ item.image }}" alt="Image placeholder"></a>
                             </div>
                             <div class ="text">
-                              <h2 class="heading">Standard Single Room</h2>
-                              <p>Description!</p>
+                              <h2 class="heading">{{ item.heading }}</h2>
+                              <p> {{ item.description }}</p>
                             </div>
                             </div>
                       </div>
-                    {% endif %}
-                  {% endfor %}
+                    {% endfor %}
                   </div>
                 </div>
               </div>
@@ -125,21 +121,19 @@ title: Rooms | Homegate Inn
               <div class="row">
                 <div class="col-md-12 block-13">
                   <div class="nonloop-block-13 owl-carousel">
-                    {% for image in site.static_files %}
-                    {% if image.path contains 'images/gallery' %}
+                    {% for item in site.data.gallery_outdoor %}
                       <div class="item">
                         <div class="block-34">
                           <div class="image"> 
-                            <a href="#"><img src="{{ site.baseurl }}{{ image.path }}" alt="Image placeholder"></a>
+                            <a href="#"><img src="{{ item.image }}" alt="Image placeholder"></a>
                             </div>
                             <div class ="text">
-                              <h2 class="heading">Standard Single Room</h2>
-                              <p>Description!</p>
+                              <h2 class="heading">{{ item.heading }}</h2>
+                              <p> {{ item.description }}</p>
                             </div>
                             </div>
                       </div>
-                    {% endif %}
-                  {% endfor %} 
+                    {% endfor %}
                 </div>
               </div>
             </div>
