--- a/about.html
+++ b/about.html
@@ -29,12 +29,12 @@ title: About Us | Homegate Inn
             <h2>Enjoy the Homegate Inn Experience</h2>
           </div>
           <div class="col-md-6">
-            <p>Homegate Inn was built in 2004, making it the newest hotel in the town of Louisville, MS. Located just off the highway, you can find it easily and have quick access to grocery and gas, and still find peace and quiet. </p>
-            <p>Kim and Jay have been in the hospitality industry for over 20 years, satisfying customers all over the country. This friendly, family and operated hotel will be your home every time you choose to stay with us.</p>
+            <p>Homegate Inn was built in 2004, making it the newest hotel in Louisville, MS. Located just off the highway, you can find it easily and have quick access to grocery and gas, and still find peace and quiet. </p>
+            <p>Kim and Jay have been in the hospitality industry for over 20 years, satisfying customers all over the country. This friendly, family-operated hotel will be your home every time you choose to stay with us.</p>
             <p>We're located just 25 minutes from Starkville, MS, which houses Mississippi State University. We're also an easy 90 minute drive to Jackon, MS, the state capital, and only 45 minutes to the nearest airport in Columbus, MS.</p>
           </div>
           <div class="col-md-6">
-            <p>The town of Louisville is small and quaint, and still has everything to meet your needs - Walmart, fast food chains, and sit-down dining. You'll find everything you need under 5 minutes away.</p>
+            <p>Louisville is small and quaint, and still has everything to meet your needs - Walmart, fast food chains, and sit-down dining. You'll find everything you need under 5 minutes away.</p>
             <p>In each room, you'll find a microwave, refrigerator, coffee maker, iron and ironing board, hair dryer, and all towels/linens provided. You can also enjoy our high speed internet and flat screen TV. In the mornings you can come to the lobby for a complimentary continental breakfast.</p>
           </div>
 
