--- a/rooms.html
+++ b/rooms.html
@@ -30,7 +30,7 @@ title: Rooms | Homegate Inn
 
                 <h2 class="heading">{{item.type}}</h2>
                 <ul class="specs mb-5">
-                  <li><strong>Adults:</strong> {{ item.adults }}</li>
+                  <li><strong>Occupancy:</strong> {{ item.adults }}</li>
                   <li><strong>Facilities:</strong> {{ item.facilities }} </li>
                   <li><strong>Size:</strong> {{ item.size }}m<sup>2</sup></li>
                   <li><strong>Bed Type:</strong> {{ item.bed }}</li>
