--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: About Us | Homegate Inn
+
 ---
-    
   <div class="block-30 block-30-sm item" style="background-image: url('/assets/images/whole.JPEG');" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row align-items-center">
@@ -29,13 +29,21 @@ title: About Us | Homegate Inn
             <h2>Enjoy the Homegate Inn Experience</h2>
           </div>
           <div class="col-md-6">
-            <p>Homegate Inn was built in 2004, making it the newest hotel in Louisville, MS. Located just off the highway, you can find it easily and have quick access to grocery and gas, and still find peace and quiet. </p>
+            <p>Homegate Inn was built in 2004, making it the newest hotel in Louisville, MS. Located just off the highway, you can find it easily, have quick access to grocery, food, and gas, and still find peace and quiet. </p>
             <p>Kim and Jay have been in the hospitality industry for over 20 years, satisfying customers all over the country. This friendly, family-operated hotel will be your home every time you choose to stay with us.</p>
-            <p>We're located just 25 minutes from Starkville, MS, which houses Mississippi State University. We're also an easy 90 minute drive to Jackon, MS, the state capital, and only 45 minutes to the nearest airport in Columbus, MS.</p>
+            <p>In each room, you'll find a microwave, refrigerator, coffee maker, iron and ironing board, hair dryer, and all towels/linens provided. You can also enjoy our high speed internet and flat screen TV with Direct TV. In the mornings you can come to the lobby for a complimentary continental breakfast (**temporarily closed due to COVID-19**).</p>
           </div>
           <div class="col-md-6">
             <p>Louisville is small and quaint, and still has everything to meet your needs - Walmart, fast food chains, and sit-down dining. You'll find everything you need under 5 minutes away.</p>
-            <p>In each room, you'll find a microwave, refrigerator, coffee maker, iron and ironing board, hair dryer, and all towels/linens provided. You can also enjoy our high speed internet and flat screen TV. In the mornings you can come to the lobby for a complimentary continental breakfast.</p>
+            <p>You can't beat Louisville when it comes to our central location. Nearby cities and attractions include:
+            <ul>
+              <li>Starkville, MS: Mississippi State University (25 miles)</li>
+              <li>Jackson, MS: state capital and JAN airport (90 miles)</li>
+              <li>Columbus, MS: GTR airport (45 miles)</li>
+              <li>Philadelphia, MS: Geyser Falls Water Park, casinos, and state-renowned Neshoba County Fair (30 miles)</li>
+              <li>Noxubee Wildlife Refuge (25 miles) </li>
+              <li>Ackerman, MS: Red Hills Powerplant (25 miles)</li>
+            </ul>
           </div>
 
         </div>
