--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ title: Homegate Inn
   </div>
 </div>
 
-<div class="block-30 block-30-sm item" style="background-image: url('/assets/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+<div class="block-30 block-30-sm item" style="background-image: url('/assets/images/gray.jpeg');" data-stellar-background-ratio=".50">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-12">
           <h2 class="heading">Quality accommodation that exceeds the expectations</h2>
-          <p><a href="tel:6627734005" class="btn py-4 px-5 btn-primary"> Call now</a></p>
+          <p><a href="rooms" class="btn py-4 px-5 btn-primary"> See our rooms</a></p>
         </div>
       </div>
     </div>
