Make all gallery photos clickable, thumbnails smaller sized

--- a/rooms.html
+++ b/rooms.html
@@ -52,7 +52,7 @@ title: Rooms | Homegate Inn
             <div class="col-lg-4 mb-5">
               <div class="block-34">
                 <div class="image"> 
-                  <a href="#"><img src="{{ item.image }}" alt="Image placeholder"></a>
+                  <a href="{{ item.image }}"><img src="{{ item.small_image }}" alt="Image placeholder"></a>
                 </div>
                 <div class ="text">
                   <p> {{ item.description }}</p>
