--- a/about.html
+++ b/about.html
@@ -29,12 +29,12 @@ title: About Us | Homegate Inn
             <h2>Enjoy the Homegate Inn Experience</h2>
           </div>
           <div class="col-md-6">
-            <p>Homegate Inn was built in 2004, making it the newest hotel in Louisville, MS. Located just off the highway, you can find it easily, have quick access to grocery, food, and gas, and still find peace and quiet. </p>
-            <p>Kim and Jay have been in the hospitality industry for over 20 years, satisfying customers all over the country. This friendly, family-operated hotel will be your home every time you choose to stay with us.</p>
-            <p>In each room, you'll find a microwave, refrigerator, coffee maker, iron and ironing board, hair dryer, and all towels/linens provided. You can also enjoy our high speed internet and flat screen TV with Direct TV. In the mornings you can come to the lobby for a complimentary continental breakfast (**temporarily closed due to COVID-19**).</p>
+            <p><u>Homegate Inn</u> was built in 2004, making it the newest hotel in Louisville, MS. Located just off the highway, you can find it easily, have quick access to grocery, food, and gas, and still find peace and quiet. </p>
+            <p><u>Kim and Jay</u> have been in the hospitality industry for over 20 years, satisfying customers all over the country. This friendly, family-operated hotel will be your home every time you choose to stay with us.</p>
+            <p><u>In each room</u>, you'll find a microwave, refrigerator, coffee maker, iron and ironing board, hair dryer, and all towels/linens provided. You can also enjoy our high speed internet and flat screen TV with Direct TV. In the mornings you can come to the lobby for a complimentary continental breakfast (**temporarily closed due to COVID-19**).</p>
           </div>
           <div class="col-md-6">
-            <p>Louisville is small and quaint, and still has everything to meet your needs - Walmart, fast food chains, and sit-down dining. You'll find everything you need under 5 minutes away.</p>
+            <p><u>Louisville</u> is small and quaint, and still has everything to meet your needs - Walmart, fast food chains, and sit-down dining. You'll find everything you need under 5 minutes away.</p>
             <p>You can't beat Louisville when it comes to our central location. Nearby cities and attractions include:
             <ul>
               <li>Starkville, MS: Mississippi State University (25 miles)</li>
@@ -53,7 +53,7 @@ title: About Us | Homegate Inn
 
     <div class="block-31 mb-5" style="position: relative;">
           <div class="owl-carousel loop-block-31">
-            <div class="block-30 no-overlay item" style="background-image: url('/assets/images/bball.JPEG');"></div>
+            <div class="block-30 no-overlay item diff-img" style="background-image: url('/assets/images/bball.JPEG');"></div>
             <div class="block-30 no-overlay item" style="background-image: url('/assets/images/back.JPEG');"></div>
           </div>
     </div>
